--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 
       <div class="header__nav_links">
         <ul class="header__nav_links-items">
-          <li class="header__nav_links-item"><a href="/">Home</a></li>
+          <li class="header__nav_links-item"><a href="#">Home</a></li>
           <li class="header__nav_links-item"><a href="#features">Key Features</a></li>
           <li class="header__nav_links-item"><a href="#pricing">Pricing</a></li>
           <li class="header__nav_links-item"><a href="#testiminial">Testiminial</a></li>
